[project]
name = "image-enhance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "pillow>=12.0.0",
    "pyiqa>=0.1.14.1",
    "pyqt6>=6.10.1",
    "realesrgan>=0.3.0",
    "torch>=2.9.1",
]

[dependency-groups]
dev = [
    "ipython>=9.8.0",
]
